changes how to buy

--- a/resources/templates/pages/how_to_buy.html
+++ b/resources/templates/pages/how_to_buy.html
@@ -38,7 +38,7 @@
                         <h1 class="font-text-bold how-to-buy-text">Go to Pancakeswap</h1>
                     </div>
                     <div class="col-sm-12" style="margin-left: 35px;">
-                        <h1 class="font-text sub-header-main-blocks-sm">Go to https://exchange.pancakeswap.finance/#/swap</h1>
+                        <h1 class="font-text sub-header-main-blocks-sm">Go to https://v1exchange.pancakeswap.finance/#/swap</h1>
                     </div>
                 </div>
             </div>
