new team images and a warning box on safegalaxy

--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -4,11 +4,14 @@
 
 {% block content %}
 
-
     <div class="position-ref  top-background">
         {% include "/components/navbar.html" %}
         <div class="content">
             <div class="col-lg">
+                <div class="center-items alert alert-info alert-dismissible fade show" style="width: 70%;" role="alert">
+                  <strong>Buy v1 (old) when purchasing SafeGalaxy on PancakeSwap.</strong>
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
                 <div class="row padding-top-70">
                     <div class="col-sm-12">
                         <h1 class="font-text-bold header-main">Intergalactic Static<br>Liquidity Protocol</h1>
