--- a/resources/templates/pages/team.html
+++ b/resources/templates/pages/team.html
@@ -24,16 +24,17 @@
             <div class="col-lg-{{ (12 / top_profiles_data|length)|int }}">
                 <div class="profile-img" style="--url: url('{{ profile.img_url }}')">
                     <p class="profile-text">
-                        <span style="font-weight: 800; font-family: 'Mosk Bold';">{{ profile.profile_name }}</span>
+                        <span style="font-weight: 500; font-family: 'Mosk Bold'; font-size: 14px;">{{ profile.profile_name }}</span>
                         <br>
-                        <span style="font-size: 16px;">{{ profile.profile_position|safe }}</span>
+                        <span style="font-size: 12px;">{{ profile.profile_position|safe }}</span>
                         <br>
-                        <span style="font-size: 14px;">Connect through</span>
-                        <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" usemap="#linkedin_map-{{ profile.profile_name }}">
+                        <br>
+                        <br>
+                        <span style="font-size: 12px;">Connect through</span>
+                        <img src="/storage/static/images/Linkedin.png" width="14px" height="14px" usemap="#linkedin_map-{{ profile.profile_name }}">
                         <map name="linkedin_map-{{ profile.profile_name }}">
-                            <area shape="circle" coords="10,10,10" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
+                            <area shape="circle" coords="7,7,7" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
                         </map>
-                        <hr class="profile-hr">
                     </p>
                 </div>
             </div>
@@ -46,16 +47,17 @@
             <div class="col-lg-{{ (12 / center_profiles_data|length)|int }}">
                 <div class="profile-img" style="--url: url('{{ profile.img_url }}')">
                     <p class="profile-text">
-                        <span style="font-weight: 800; font-family: 'Mosk Bold';">{{ profile.profile_name }}</span>
+                        <span style="font-weight: 500; font-family: 'Mosk Bold'; font-size: 14px;">{{ profile.profile_name }}</span>
                         <br>
-                        <span style="font-size: 16px;">{{ profile.profile_position|safe }}</span>
+                        <span style="font-size: 12px;">{{ profile.profile_position|safe }}</span>
                         <br>
-                        <span style="font-size: 14px;">Connect through</span>
-                        <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" usemap="#linkedin_map-{{ profile.profile_name }}">
+                        <br>
+                        <br>
+                        <span style="font-size: 12px;">Connect through</span>
+                        <img src="/storage/static/images/Linkedin.png" width="14px" height="14px" usemap="#linkedin_map-{{ profile.profile_name }}">
                         <map name="linkedin_map-{{ profile.profile_name }}">
-                            <area shape="circle" coords="10,10,10" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
+                            <area shape="circle" coords="7,7,7" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
                         </map>
-                        <hr class="profile-hr">
                     </p>
                 </div>
             </div>
@@ -68,16 +70,17 @@
             <div class="col-lg-{{ (12 / bottom_profiles_data|length)|int }}">
                 <div class="profile-img" style="--url: url('{{ profile.img_url }}')">
                     <p class="profile-text">
-                        <span style="font-weight: 800; font-family: 'Mosk Bold';">{{ profile.profile_name }}</span>
+                        <span style="font-weight: 500; font-family: 'Mosk Bold'; font-size: 14px;">{{ profile.profile_name }}</span>
                         <br>
-                        <span style="font-size: 16px;">{{ profile.profile_position|safe }}</span>
+                        <span style="font-size: 12px;">{{ profile.profile_position|safe }}</span>
                         <br>
-                        <span style="font-size: 14px;">Connect through</span>
-                        <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" usemap="#linkedin_map-{{ profile.profile_name }}">
+                        <br>
+                        <br>
+                        <span style="font-size: 12px;">Connect through</span>
+                        <img src="/storage/static/images/Linkedin.png" width="14px" height="14px" usemap="#linkedin_map-{{ profile.profile_name }}">
                         <map name="linkedin_map-{{ profile.profile_name }}">
-                            <area shape="circle" coords="10,10,10" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
+                            <area shape="circle" coords="7,7,7" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
                         </map>
-                        <hr class="profile-hr">
                     </p>
                 </div>
             </div>
