updates for copyright

--- a/resources/templates/components/footer.html
+++ b/resources/templates/components/footer.html
@@ -169,7 +169,7 @@
         <br>
         <div class="row">
             <div class="col-lg">
-                &#169; {{ year }} SafeGalaxy | All Rights Reserved.
+                &#169; {{ year }} SafeGalaxy & &#169; {{ year }} Cryptonite Technologies Ltd. &nbsp; All Rights Reserved.
             </div>
         </div>
     </div>
